--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "4.16.3",
     "express-session": "^1.13.0",
     "express-writer": "0.0.4",
+    "faker": "^5.5.3",
     "fancy-log": "^1.3.3",
     "govuk-elements-sass": "^3.1.3",
     "govuk-frontend": "^3.12.0",
